tests/sksl/errors/ReturnTypeMismatch.sksl
int foo() {
    return 1.0;
}

void main() {}
